--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,18 @@ repositories {
 mainClassName = 'animpack.Knn'
 
 
+//Tests
+dependencies {
+    testCompile "junit:junit:4.11"
+}
+sourceSets {
+    test {
+        java {
+            srcDirs = ["test/"]  // Note @Peter's comment below
+        }
+    }
+}
+
 //FindBugs
 tasks.withType(FindBugs) {
     reports {
